# elsec-wgmon

./: Cargo.toml  Makefile  README.md  wgmon.service  wgmon@.service
src/: dbus.rs  killswitch.rs  main.rs  wgquick.rs
