[package]
name = "wgmon"
version = "0.1.0"
edition = "2021"

[dependencies]
zbus = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"
